# ai-enabled-ato

./: .gitattributes  .gitignore  ATO_AI_ACCELERATOR_PLAN.md  ATO_BLOCK1_TECHNICAL_SPEC.md  ATO_PORTAL_DEMO_TALKING_TRACK.md  ATO_PRODUCT_FUNCTIONALITY_AND_EPICS.md  ATO_TECHNICAL_SPEC.md  README.md  alembic.ini  config.local.env.bedrock.example  config.local.env.example  git-status-report.txt  pyproject.toml
.cursor/rules/: ato-runtime-deployment-contract.mdc  composer-subagents-for-plans.mdc  no-canvas-without-request.mdc
.github/workflows/: contracts.yml
data/fixtures/: golden_fisma_minimal.expected.json  golden_fisma_minimal.json  malformed_broken_evidence_link.json  malformed_missing_control_id.json  messy_grc_export.json
data/qualification/: README.md  manifest.json
deployment/: README.md
deployment/config/: dev-oidc-client-secret  runtime-config.dev_local.bedrock.example.json  runtime-config.dev_local.e2e.json  runtime-config.dev_local.json  runtime-config.dev_local.openai.example.json  runtime-config.dev_local.portal.example.json  runtime-config.onprem.example.json  runtime-config.wsl_local.json  runtime-config.wsl_portal.bedrock.json  runtime-config.wsl_portal.json
deployment/nginx/: ato-api.conf  ato-portal.conf
deployment/systemd/: ato-analyzer-worker.service  ato-analyzer-worker.wsl-local.service  ato-api.service  ato-api.wsl-local.service  ato-intake-worker.service  ato-synthetic-intake-worker.service  ato-synthetic-intake-worker.timer
docs/: AIRGAP_PRESTAGE.md  AI_EVALUATION_GUIDE.md  CONFIGURATION.md  CUSTOMER_ONBOARDING.md  FINAL_PRODUCT_IMPLEMENTATION_PLAN.md  LOCAL_DEMO_WORK_STATUS.md  OPERATIONS_AND_RECOVERY.md  P0_GATE_RECORD.md  P1_GATE_RECORD.md  P2_GATE_RECORD.md  P3_GATE_RECORD.md  P4_GATE_RECORD.md  P5_GATE_RECORD.md  P6_ANALYSIS_GATE_RECORD.md  P6_GATE_RECORD.md  P7_GATE_RECORD.md  PACKAGE_EDITOR_PLAN.md  PORTAL_THEME.md  PORTAL_WORKFLOW_GUIDE.md  RELEASE_EVIDENCE_INDEX.md  RELEASE_PACKAGING.md  THIRD_PARTY_HARDENING_PLAN.md  THREAT_MODEL.md  UPLOAD_FIRST_INTAKE_PLAN.md  WSL_CURSOR_SHELL_INTEGRATION_FIX.md  WSL_LOCAL_DEPLOY.md
docs/contracts/: LIFECYCLE_AND_ERRORS.md  README.md  ai-evaluation-record.schema.json  analysis-profile.schema.json  artifact-manifest.schema.json  authority-manifest.json  authority-manifest.schema.json  content-manifest.schema.json  domain.schema.json  export-manifest.schema.json  extracted-segment.schema.json  fisma-control-inventory.schema.json  (+11 more)
migrations/: env.py
portal/: .env.development  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: build_release.sh  compile_analysis_profiles.py  compile_fisma_analysis_profile.py  drain_workers.sh  e2e-stack-common.sh  e2e-stack-start.sh  e2e-stack-stop.sh  install.sh  prestage_airgap_deps.sh  regenerate_qualification_manifest.py  rollback.sh  smoke_service_chain.sh  start-portal.sh  upgrade.sh  verify_backup_contract.sh  verify_release.sh  wsl-local-deploy.sh  wsl-local-reset.sh  wsl-openai-standup.sh  wsl-portal-enable.sh  wsl-standup.sh  wsl_chat_demo_ready.py
tests/: conftest.py  test_compile_analysis_profiles.py  test_compile_fisma_analysis_profile.py  test_contracts.py  test_deployment_contract.py  test_e2e_contract.py  test_golden_fixture.py  test_normalize.py  test_package_validate.py  test_portal_contract.py  test_preflight.py  test_process_one_e2e.py  test_release_packaging.py  test_sufficiency_matrix.py
(+579 files in other folders)
