[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ato_analysis"
version = "0.1.0"
description = "ATO Block 1 evidence analysis engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call live OpenAI (optional)",
]
