[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ato_service"
version = "0.1.0"
description = "ATO Evidence Analysis Portal durable service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "httpx",
    "jsonschema[format]",
    "pydantic>=2",
    "python-multipart",
    "sqlalchemy[asyncio]>=2",
    "uvicorn[standard]",
]

[project.scripts]
ato-service = "ato_service.main:main"
ato-synthetic-intake-worker = "ato_service.synthetic_intake_worker:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
bedrock = [
    "boto3>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: optional live dependency tests (PostgreSQL, external services)",
]
