[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ato_service"
version = "0.1.0"
description = "ATO Evidence Analysis Portal durable service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "httpx",
    "jsonschema[format]",
    # pypdf: primary PDF text-layer extraction (PACKAGE_EDITOR_PLAN Section 5).
    "pypdf==6.14.2",
    # pypdfium2: bounded PDF page rendering for governed vision intake.
    "pypdfium2==5.11.0",
    # python-docx: mature DOCX body and table extraction behind ZIP safety controls.
    "python-docx==1.2.0",
    # openpyxl: mature XLSX cached cell-value extraction; no formula evaluation.
    "openpyxl==3.1.5",
    # defusedxml: hostile-XML hardening for OSCAL, scanner exports, and SVG sanitization.
    "defusedxml==0.7.1",
    # lxml: python-docx dependency and advanced XML support behind defusedxml boundaries.
    "lxml==6.0.2",
    # Pillow: bounded PNG, JPEG, and WebP validation and decode.
    "Pillow==12.2.0",
    "pydantic>=2",
    "python-multipart",
    "sqlalchemy[asyncio]>=2",
    "uvicorn[standard]",
    # authlib: production OIDC id_token signature and claim validation (TM-002).
    "authlib==1.6.1",
]

[project.scripts]
ato-service = "ato_service.main:main"
ato-intake-worker = "ato_service.intake_worker:main"
ato-synthetic-intake-worker = "ato_service.synthetic_intake_worker:main"
ato-analyzer-worker = "ato_service.deterministic_analyzer_worker:main"
ato-operator = "ato_operator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
bedrock = [
    "boto3>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: optional live dependency tests (PostgreSQL, external services)",
]
